--- a/Frontend/LoginRegisterExample/app/src/main/res/values/strings.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">PDOLogin</string>
     <string name="hint_id">ID를 입력하세요</string>
     <string name="hint_password">패스워드를 입력하세요</string>
+    <string name="hint_find_password1">비밀번호를 잊으셨나요?</string>
+    <string name="hint_find_password2">비밀번호 찾기</string>
     <string name="hint_name">성명을 입력하세요</string>
     <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
     <string name="hint_email">이메일을 입력하세요</string>
