--- a/Frontend/LoginRegisterExample/app/src/main/res/values/strings.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PDOLogin</string>
+    <string name="app_name">놀면 뭐하니?</string>
     <string name="hint_id">ID를 입력하세요</string>
     <string name="hint_password">패스워드를 입력하세요</string>
     <string name="hint_find_password1">비밀번호를 잊으셨나요?</string>
